# formative-fdsp-apiwizards

./: .gitignore  README.md  pyproject.toml
jorge/output/: text_data.csv  text_data.feather
jorge/src/: text-analisis.py  text-mining .R
notebook/: bar.html  charts-time_annalysis.ipynb  comment.html  covid.html  download_export.ipynb  final_charts-time_annalysis.ipynb  functions.py  graphs-time_annalysis.ipynb  sample.feather  sample2012.feather  scatter.html  schema.json  tags.html  time_annalysis.ipynb
