[tool.poetry]
name = "oii-sds"
version = "0.1.0"
description = "oii-sds assignments"
authors = ["api wizards"]
readme = "README.md"
packages = [{include = "oii_sds"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
scipy = "^1.9.3"
statsmodels = "^0.13.2"
matplotlib = "^3.6.1"
numpy = "^1.23.4"
geopandas = "^0.11.1"
bs4 = "^0.0.1"
datetime = "^4.7"
ipython = "^8.5.0"
ipykernel = "^6.16.1"
black = "^22.10.0"
flake8 = "^5.0.4"
lxml = "^4.9.1"
praw = "^7.6.0"
psaw = "^0.1.0"
requests-oauthlib = "^1.3.1"
tweepy = "^4.10.1"
twint = "^2.1.20"
plotly = "^5.11.0"
plotly-express = "^0.4.1"
nbformat = "^5.7.0"
py7zr = "^0.20.1"
xmltodict = "^0.13.0"
pyarrow = "^10.0.0"
raceplotly = "^0.1.6"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}
ipykernel = "^6.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
